<resources>
    <string name="app_name">MyCalculator</string>
    <string name="calc_text">123456789</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="Divide">/</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="less">-</string>
    <string name="_0">0</string>
    <string name="clr">CLR</string>
    <string name="Square">+</string>
    <string name="Equal">=</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="Multiply">*</string>
</resources>