<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48sp"
        android:gravity="end|bottom"
        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml">

        </Button>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="6"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,HardcodedText,UsingOnClickInXml">
        </Button>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/Multiply"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml">

        </Button>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

        <Button
            android:id="@+id/btnLess"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/less"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,NestedWeights,UsingOnClickInXml">

        </Button>



        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/clr"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/Square"
            android:layout_margin="2pt"
            tools:ignore="ButtonStyle,UsingOnClickInXml">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:text="@string/Equal"
            android:layout_margin="2pt"
            tools:ignore="NestedWeights,UsingOnClickInXml">
        </Button>


    </LinearLayout>

</LinearLayout>








